[gd_scene load_steps=12 format=2]

[ext_resource path="res://main/assets/card_actual/Colonel_BBQ.png" type="Texture" id=1]
[ext_resource path="res://main/assets/card_actual/Colonel_Mail.png" type="Texture" id=2]
[ext_resource path="res://main/3d/card3d.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
length = 0.5
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Spatial/FrontFace:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spatial/BackFace:mesh:material:albedo_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Spatial/Area:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
length = 1.5
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Spatial/FrontFace:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 90, 0, 0 ), Vector3( 90, 0, 180 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spatial/BackFace:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 90, 180, 0 ), Vector3( 90, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "slide"
length = 0.25
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Spatial:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.5, 0 ) ]
}

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 1 )

[sub_resource type="PlaneMesh" id=5]
material = SubResource( 4 )
size = Vector2( 1, 1.688 )

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 2 )

[sub_resource type="PlaneMesh" id=7]
material = SubResource( 6 )
size = Vector2( 1, 1.688 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.5, 0.844, 0.1 )

[node name="Card" type="Spatial"]
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 1 )
anims/flip = SubResource( 2 )
anims/slide = SubResource( 3 )

[node name="Spatial" type="Spatial" parent="."]

[node name="FrontFace" type="MeshInstance" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
cast_shadow = 0
generate_lightmap = false
mesh = SubResource( 5 )
material/0 = null

[node name="BackFace" type="MeshInstance" parent="Spatial"]
transform = Transform( -1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, 0, 0, 0 )
mesh = SubResource( 7 )
material/0 = null

[node name="Area" type="Area" parent="Spatial"]

[node name="CollisionShape" type="CollisionShape" parent="Spatial/Area"]
shape = SubResource( 8 )

[connection signal="input_event" from="Spatial/Area" to="." method="_on_Area_input_event"]
